[package]
name = "hora"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
real_hora = {package = "hora", version="0.1.1"}
libc = "0.2"

[lib]
name = "hora"
crate-type = ["staticlib", "cdylib"]