[package]
name = "hora-ios"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
hora = {version="0.1.1"}
libc = "0.2"

[lib]
name = "hora"
crate-type = ["staticlib", "cdylib"]